
server_connect() should check the return from split_line() to get the number
of arguments

metaserver should write a \n after the ip:port

send_queued_data() should return without doing anything if there is no data
to send

added check for /dev/random and substitute simple random number generation
on systems without it

added support for the server version (801) client request

Changes from 0.08
=================

added support for the data port error (626) command

added support for the change speed command (700)

added support for client initiated 214 stats request

configure will look for mysql in /usr/local as well as /usr

fixed server crash when a user had a hotlist

added addition debugging support for various structures

user and channel names are now case insensitive

internal library size is now stored in kilobytes to avoid rounding errors

endian checking was rewritten to be more portable

changed user levels to leech, user, moderator, admin, elite

added support for the wallop command (627)

added support for ban, unban and banlist (612, 614, 615, 616, 629)

mods see some additional information in whois

added client support for server linking/delinking (see README for numerics)

server now notifies clients when login() sets their userlevel

add_hotlist should immediately notify a client of a logged in user,
otherwise the client won't see them

clients may only join 5 channels at a time

added -s option to allow only privileged users to create channels

Changes from 0.07
=================

added support for the 218-221 numerics

DOS filenames need to be quoted when submitting sql queries

set SO_REUSEADDR on the main server socket

fixed off-by-1 error in patchnap.c

fixed downloads to follow the correct sequence.  server should not send the
204 message to the downloader until recieving the 608 response from the
uploader

added support for downloading from firewalled clients (500,501)

search patterns need to have %, ', _ and \ quoted in the SQL query
